- fixed bug in OMSRcreate() - always returned SR_RET_OK
- fixed a bug that caused ommysql to always complain about missing
  templates
- fixed a mem leak in OMSRdestruct - freeing the object itself was
  forgotten - thanks to varmojfekoj for the patch
- fixed a memory leak in syslogd/init() that happend when the config
  file could not be read - thanks to varmojfekoj for the patch
---------------------------------------------------------------------------
Version 1.17.5 (rgerhards), 2007-07-30
- continued to work on modularization
- fixed a missing file bug - thanks to Andrea Montanari for reporting
  this problem
- fixed a problem with shutting down the worker thread and freeing the
  selector_t list - this caused messages to be lost, because the
  message queue was not properly drained before the selectors got
  destroyed.
---------------------------------------------------------------------------
Version 1.17.4 (rgerhards), 2007-07-27
- continued to work on modularization
- fixed a situation where rsyslogd could create zombie processes
  thanks to mildew for the patch
- applied patch from Michel Samia to fix compilation when NOT
  compiled for pthreads
---------------------------------------------------------------------------
Version 1.17.3 (rgerhards), 2007-07-25
- continued working on modularization
- fixed a bug that caused rsyslogd to segfault on exit (and
  probably also on HUP), when there was an unsent message in a selector
  that required forwarding and the dns lookup failed for that selector
  (yes, it was pretty unlikely to happen;))
  thanks to varmojfekoj <varmojfekoj@gmail.com> for the patch
- fixed a memory leak in config file parsing and die()
  thanks to varmojfekoj <varmojfekoj@gmail.com> for the patch
- rsyslogd now checks on startup if it is capable to performa any work
  at all. If it cant, it complains and terminates
  thanks to Michel Samia for providing the patch!
- fixed a small memory leak when HUPing syslogd. The allowed sender